Fixed about me text size and spacing

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -60,6 +60,8 @@
    .about-card {
       display: flex;
       align-items: center;
+      font-size: larger;
+      line-height: 2rem;
    }
 
    #about-left {
